infra/base/traefik-external-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nas-external
  namespace: infra
spec:
  type: ExternalName
  externalName: nas.lab
  ports:
    - port: 443
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: opnsense-external
  namespace: infra
spec:
  type: ExternalName
  externalName: opnsense.lab
  ports:
    - port: 4443
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-external
  namespace: infra
spec:
  type: ExternalName
  externalName: pihole.lab
  ports:
    - port: 443
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox-external
  namespace: infra
spec:
  type: ExternalName
  externalName: 192.168.1.200
  ports:
    - port: 8006
      protocol: TCP
