infra/base/argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system
  hostnames:
    - argocd.ab3704-k.duckdns.org
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
